# cpp-utilities

./: .gitignore
cmake/cmake-3.26.1-tutorial-source/: cmake-3.26.1-tutorial-source.txt
cmake/cmake-3.26.1-tutorial-source/Step1/: CMakeLists.txt
cmake/cmake-3.26.1-tutorial-source/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/cmake-3.26.1-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cmake/cmake-3.26.1-tutorial-source/Step2_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/cmake-3.26.1-tutorial-source/Step3/: CMakeLists.txt
cmake/cmake-3.26.1-tutorial-source/Step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/cmake-3.26.1-tutorial-source/Step4/: CMakeLists.txt
cmake/cmake-3.26.1-tutorial-source/Step4_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/cmake-3.26.1-tutorial-source/Step5/: CMakeLists.txt
examples/cmake/: CMakeLists.txt
examples/db/: db.cpp
examples/db/apue/: .gitignore  readme.txt
examples/db/bdb/: CMakeLists.txt  Doxyfile
examples/db/bdb/apps/: bdb_db_config_test.cpp
examples/db/bdb/bdb-lib/: CMakeLists.txt  bdb_cursor.cpp  bdb_cursor.hpp  bdb_dao.hpp  bdb_db.cpp  bdb_db.hpp  bdb_db_config.cpp  bdb_db_config.hpp  bdb_db_config_builder.cpp  bdb_db_config_builder.hpp  bdb_dbt.hpp  bdb_env.cpp  bdb_env.hpp  bdb_env_config.cpp  bdb_env_config.hpp  bdb_errors.cpp  bdb_errors.hpp  bdb_file_io.cpp  bdb_file_io.hpp  bdb_global.cpp  bdb_global.hpp
examples/db/bdb/docs/: Doxyfile.in
examples/db/bdb/imdb-lib/: CMakeLists.txt  imdb_app_init.cpp  imdb_app_init.hpp  imdb_dao.hpp  imdb_dto.hpp  imdb_request.cpp  imdb_request.hpp  principals_dao.cpp  principals_dao.hpp  principals_dto.cpp  principals_dto.hpp  title_dao.cpp  title_dao.hpp  title_dto.cpp  title_dto.hpp
examples/db/bdb/imdb-lib/txt/: name-load.txt  name-lookup.txt  name-search.txt  name-select_all.txt  names-lookup.txt  names-select-all.txt  names-select.txt  names.search.txt  title-ids-search.txt  title-load.txt  title-lookup.txt  titles-ids-select-all.txt  titles-search.txt  titles-select-all.txt  titles.select.txt
examples/db/bdb/util-lib/: CMakeLists.txt  datetime.cpp  datetime.hpp  misc_utils.cpp  misc_utils.hpp  serializable.hpp  serialization.cpp  serialization.hpp  timer.cpp  timer.hpp
examples/design/ryobuilder/: .gitignore  ryobuilder.cpp  ryobuilder.hpp
examples/education/: .gitignore  fib.cpp  fib.txt
examples/education/cards/: .gitignore  Card.cpp  Card.h  Deck.cpp  Deck.h  Hand.cpp  Hand.h  Resource.h  StdAfx.cpp  StdAfx.h  cards.cpp  cards.h  cardsDlg.cpp  cardsDlg.h  deal (1).cpp  hands (1).txt  poker (1).cpp  poker.cpp (1).2  poker.exe (1).stackdump  poker1 (1).cpp  problem (1).c
examples/education/guessnumbers/: StdAfx.h  numbers.h  numbersDlg.cpp  numbersDlg.h  resource.h
examples/education/numbers/: .gitignore  numbers.cpp  numbersDlg.cpp  numbersDlg.h  resource.h
examples/education/sort/: .gitignore  bsort.c  insertionsort.cpp  insertionsort.exe.stackdump  selectionsort.c  sort.c  sorter.cpp
examples/education/temperature/: temperature.c
examples/grep/: file
examples/language/: .gitignore  arg.cpp  bitset.cpp  comma-format.cpp  construct.cpp  copy_char.cpp  copy_char.txt  directory.cpp  enum.cpp  enum1.cpp  enumclass.cpp  except.cpp  filesystem.cpp  filesystem.sh  fstream.txt  init.cpp  intToString.cpp  iomanip.cpp  listadd.cpp  makefile  methodorder.cpp  move.cpp  multiline.cpp  my_namespace.hpp  my_namespace1.cpp  my_namespace2.cpp  new.cpp  obj.cpp  operator1.cpp  parsedigits.cpp  parsedigits.sh  ref.cpp  regex1.cpp  regex_numeric.cpp  rvalue.cpp  sstl.sh  static_member.cpp  statics_helper.cpp  stringstream.cpp  strncpy.cpp  (+3 more)
examples/language/array/: .gitignore  std_array.cpp
examples/language/array_test/: array.cpp
examples/language/assert_test/: .gitignore  assert.cpp  no_assert.cpp
examples/language/bench/: bench  bench.c  bench.c.sh  bench.py  bench.py.sh  bench.py.txt
examples/language/class/: .gitignore  class_addr.cpp  destructor.cpp  destructor_vec.cpp
examples/language/class_test/: construct_copy.cpp
examples/language/comma/: .gitignore  comma-format2.cpp
examples/language/comma_test/: comma-format3.cpp
examples/language/copy_test/: .gitignore
examples/language/doc/: .gitignore
examples/language/doc_test/: .gitignore  doc_file.cpp  doc_file.hpp
examples/language/enum/: enum1.cpp  enum2.cpp  enum2.txt
examples/language/enum_test/: .gitignore  enum2.cpp  enum_book.cpp  enums.cpp
examples/language/file/: .gitignore
examples/language/file_test/: .gitignore  filect.cpp
examples/language/getopt/: .gitignore  bdb_init.cpp  getopt.cpp  test.cpp
examples/language/getopt_test/: getopt.cpp
examples/language/init_test/: .gitignore  obj_init.cpp
examples/language/io_test/: CMakeLists.txt  errors.cpp  errors.hpp  fileio.cpp  fileio.hpp  fileio_test_read.cpp  fileio_test_read_test1.txt  fileio_test_read_test2.txt  fileio_test_read_test3.txt  fileio_test_read_test4.txt  fileio_test_write.cpp  fileio_test_write_test3.txt
examples/language/iomanip_test/: iomanip.cpp
examples/language/iter_test/: iter.cpp
examples/language/list/: .gitignore  listinter.cpp
examples/language/map/: .gitignore  iter.cpp  makefile  map1.cpp  map2.cpp  map4.cpp  map_err.cpp
examples/language/map_test/: .gitignore  map.cpp  map3.cpp
examples/language/memory/: serializable.cpp  str.cpp  struct.cpp
examples/language/memory_test/: .gitignore  free.cpp  serializable.hpp  struct.cpp  struct_ser.cpp
examples/language/method_test/: .gitignore
examples/language/move/: .gitignore  move3.cpp
examples/language/move_test/: .gitignore  bjarne.2.txt  bjarne.cpp  bjarne.txt  bjarne2.cpp  bjarne2.txt  move.txt  move1.cpp  (+13 more)
examples/language/token_test/tokenizer/: CMakeLists.txt
examples/language/token_test/tokenizer/StringFunctions/: Makefile  cmake_install.cmake  errors.cxx  file_io.cxx  file_io.h  timer.cpp  timer.h
examples/templates/: .gitignore  makefile  out1.cpp  out1a.cpp  out1b.cpp  out2.cpp  out2.h  out2a.cpp
scm/make/: m1  m2  m3  makefile  mfiles  pctmk
(+96 files in other folders)
